<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpWithEmail">

    <ImageButton
        android:id="@+id/signUpWithEmailBackBtn"
        android:layout_width="29dp"
        android:layout_height="26dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithEmailBackBtn"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/textView4"
        android:layout_margin="14dp"
        android:layout_width="361dp"
        android:layout_height="41dp"
        android:gravity=""
        android:text="@string/enter_the_email_where_you_can_be_contacted_no_one_will_see_this_on_your_profile"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/emailSignup"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="14dp"
        android:inputType="textEmailAddress"

        android:background="@drawable/custom_input"
        android:hint="@string/email"
        android:textSize="14sp"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/signUpWithEmailNextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:backgroundTint="@color/login_blue"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignup"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/signUpWithMobileBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="14dp"
        android:background="@drawable/custom_input_for_create_new_account"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithEmailNextBtn"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_mobile_number"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/goToLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithMobileBtn"
        app:layout_constraintVertical_bias="0.933" />

</androidx.constraintlayout.widget.ConstraintLayout>