<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageButton
        android:id="@+id/signUpBackBtn"
        android:layout_width="29dp"
        android:layout_height="26dp"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_your_mobile_number"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBackBtn"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/textView4"
        android:layout_margin="14dp"
        android:layout_width="361dp"
        android:layout_height="41dp"
        android:gravity=""
        android:text="@string/enter_the_mobile_number_where_you_can_be_contacted_no_one_will_see_this_on_your_profile"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="14dp"
        android:background="@drawable/custom_input"


        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="13dp"
        android:text="@string/you_may_receive_sms_notification_from_us_for_security_and_login_purposes"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMobileNumber"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:backgroundTint="@color/login_blue"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:id="@+id/signUpWithEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="14dp"
        android:background="@drawable/custom_input_for_create_new_account"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextPhoneNumber"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_email"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/goToLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithEmailBtn"
        app:layout_constraintVertical_bias="0.923" />


</androidx.constraintlayout.widget.ConstraintLayout>